--- a/style.css
+++ b/style.css
@@ -1,18 +1,106 @@
+header, main {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+footer {
+  background-color: #00cc00;
+}
 
 h1 {
   font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 24px;
+  margin-bottom: 5%;
   text-align: center;
   text-transform: uppercase;
+}
+
+h2 {
+  border-radius: 100%;
+  color: #ffffff;
+  margin-right: 2%;
+  padding: 1%;
+  text-align: center;
+  width: 3%;
+}
+
+h3 {
+  width: 25%;
 }
 
 li {
   display: inline;
 }
 
+q {
+  font-size: 35px;
+  font-style: italic;
+  font-weight: bold;
+}
+
 ul {
   list-style-type: none;
+  margin-left: 85%;
+}
+
+.pPrinciples {
+  font-family: 'Times New Roman', Times, serif;
 }
 
 #imgLogo {
+  display: block;
+  margin: 0 auto;
   width: 5%;
+}
+
+#qFooter {
+  color: #ffffff;
+  padding-top: 20%;
+}
+
+#section01Principle h2 {
+  background-color: #ffcc00;
+}
+
+#section01Principle img {
+  margin-left: 45%;
+  margin-top: -15%;
+  z-index: -1;
+}
+
+#section01Principle p {
+  z-index: 99;
+}
+
+#section02Principle h2 {
+  background-color: #ff0000;
+}
+
+#section02Principle h3, p {
+  margin-left: 45%;
+}
+
+#section03Principle h2 {
+  background-color: #c92424;
+}
+
+#sectionQuote {
+  background-image: url(images/dieter-rams.png);
+  background-repeat: no-repeat;
+  height: 300px;
+  margin-bottom: 10%;
+}
+
+#sectionQuote p {
+  margin-left: 75%;
+  margin-top: -1%;
+}
+
+#sectionQuote q {
+  border-bottom: 1px solid #00cc00;
+  display: block;
+  margin-left: 45%;
+  padding-bottom: 2%;
+  padding-top: 15%;
+  width: 40%;
 }
