--- a/style.css
+++ b/style.css
@@ -1,10 +1,33 @@
+body {
+  margin: 0;
+}
+
 header, main {
-  padding-left: 15%;
-  padding-right: 15%;
+  padding: 0 15% 0 15%;
 }
 
 footer {
   background-color: #00cc00;
+  height: 300px;
+}
+
+footer p, q {
+  color: #ffffff;
+}
+
+footer p {
+  background-color: #00cc00;
+  margin: -1% 0 0 80%;
+  text-align: center;
+  width: 10%;
+}
+
+footer q {
+  border-bottom: 1px solid #ffffff;
+  display: block;
+  margin: 0 0 0 65%;
+  padding: 5% 0% 2% 0%;
+  width: 25%;
 }
 
 h1 {
@@ -18,18 +41,21 @@ h1 {
 h2 {
   border-radius: 100%;
   color: #ffffff;
-  margin-right: 2%;
   padding: 1%;
   text-align: center;
   width: 3%;
 }
 
 h3 {
+  font-size: 30px;
+  position: relative;
   width: 25%;
+  z-index: 3;
 }
 
 li {
   display: inline;
+  font-weight: bold;
 }
 
 q {
@@ -45,6 +71,8 @@ ul {
 
 .pPrinciples {
   font-family: 'Times New Roman', Times, serif;
+  font-size: 18px;
+  width: 42%;
 }
 
 #imgLogo {
@@ -53,36 +81,62 @@ ul {
   width: 5%;
 }
 
-#qFooter {
-  color: #ffffff;
-  padding-top: 20%;
-}
+/* FIRST PRINCIPLE */
 
 #section01Principle h2 {
   background-color: #ffcc00;
 }
 
+#section01Principle h2, p {
+  margin-left: 7%;
+}
+
+#section01Principle h3 {
+  margin-top: -6%;
+  margin-left: 15%;
+}
+
 #section01Principle img {
-  margin-left: 45%;
-  margin-top: -15%;
-  z-index: -1;
+  margin-left: 50%;
+  margin-top: -24%;
+  position: relative;
+  width: 45%;
+  z-index: 0;
 }
 
 #section01Principle p {
-  z-index: 99;
+  margin: 1% 0 0 15%;
+  position: relative;
+  z-index: 1;
+}
+
+/* SECOND PRINCIPLE */
+
+#section02Principle {
+  margin-top: 10%;
 }
 
 #section02Principle h2 {
   background-color: #ff0000;
 }
 
-#section02Principle h3, p {
+#section02Principle h3 {
   margin-left: 45%;
 }
+
+#section02Principle img {
+  margin-top: -30%;
+  position: relative;
+  z-index: 4;
+}
+
+/* THIRD PRINCIPLE */
 
 #section03Principle h2 {
   background-color: #c92424;
 }
+
+/* FIRST BANNER */
 
 #sectionQuote {
   background-image: url(images/dieter-rams.png);
@@ -91,16 +145,18 @@ ul {
   margin-bottom: 10%;
 }
 
-#sectionQuote p {
-  margin-left: 75%;
-  margin-top: -1%;
-}
-
 #sectionQuote q {
   border-bottom: 1px solid #00cc00;
+  color: #000000;
   display: block;
   margin-left: 45%;
-  padding-bottom: 2%;
-  padding-top: 15%;
+  padding: 15% 0 3% 0;
   width: 40%;
+}
+
+#sectionQuote p {
+  background-color: #f3f3f3;
+  margin: -1% 0 0 75%;
+  text-align: center;
+  width: 10%;
 }
